# opengl-texture

./: .gitmodules  CMakeLists.txt  README.md
include/: image.hpp  texture.hpp
include/framebuffer/: framebuffer.hpp
include/math/: transformation.hpp
include/render/: renderer.hpp
include/shader/: program.hpp  uniforms.hpp
include/texture/: image.hpp  texture.hpp  texture_2d.hpp  texture_3d.hpp
include/vertexes/: vbo.hpp
src/: image.cpp  program.cpp  shader.cpp  shader_exception.cpp  texture.cpp
src/framebuffer/: framebuffer.cpp  framebuffer_exception.cpp
src/math/: transformation.cpp
src/render/: renderer.cpp
src/shader/: file.cpp  program.cpp  shader.cpp
src/texture/: image.cpp  image_exception.cpp  texture.cpp  texture_2d.cpp  texture_3d.cpp
src/vertexes/: vbo.cpp
